2014-XX-XX pynote 0.2
---------------------

* Added localisation via pybabel (GNU gettext files), see #284.
  -> Added German translation.
* note-init script has been merged to note init, see #295.
* Added pygments support, see #301.
  -> Read notes with highlighting using note show -l.
     Find a list of supported lexers on the pygments project page!
  -> Unified diffs are colored by default (suppress it with --no-color).
* Added a note show --all option, see #293, thanks to nsmathew.
* Added a note edit --title option, see #292, thanks to nsmathew.
* New command: note revisions; You can print out the existing revisions
  of a note, see #290.
* Fixed a bug with revisions. Do not create a new revision if there are
  no changes, see #304.


2013-12-24 pynote 0.1
---------------------

* Do not create a new revision if there are no changes, see #277.
* Improved pynote.__main__ code. If no command is entered just
  choose note list, see #288.
* note trash works again, see #278.
* Added a note restore command to restore deleted notes from trash,
  see #281.
* Improved JSON serialization, see #285.
* Renamed versions.json to revisions.json. Please rename that file in ~/.note!
* Reverted the changes in #276.
* Added a --no-header option to note show, thanks to stewie.


2013-12-18 pynote 0.1b3
-----------------------

* Dateformat can be set in ~/.noterc. Please refer to docs.python.org,
  strftime and strptime behavior.
* Compare command. Compare two revisions of a note by creating a
  unified diff.
* You only have to set your data dir in ~/.noterc. Like data = ~/.note.
* Do not display an empty table if there is no data, see #254.
* The root section in ~/.noterc must be [DEFAULT]. The previous values
  do not work any more!
* Add every revision to versions.json, see #276.


2013-12-10 pynote 0.1b2
-----------------------

* fixed setup.py, see #255.


2013-12-10 pynote 0.1b1
-----------------------

* Initial release.