@@ -8,6 +8,7 @@
   -> Read notes with highlighting using note show -l.
      Find a list of supported lexers on the pygments project page!
   -> Unified diffs are colored by default (suppress it with --no-color).
+  -> Choose your pygments theme in noterc with pygments_theme, see #307.
 * Added a note show --all option, see #293, thanks to nsmathew.
 * Added a note edit --title option, see #292, thanks to nsmathew.
 * New command: note revisions; You can print out the existing revisions
